# chess-web

./: .gitignore  Cargo.toml  README.md  index.html  index.js  style.css  worker.js
assets/: LICENSE
pkg/: chess_web.js  chess_web_bg.wasm
src/: lib.rs
